--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,32 +1,32 @@
-footer {
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-
-  /* width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0; */
- position: fixed
-  bottom: 0;
-  background-color: blue;
-  color: #fff;
-  width: 100%;
+  align-items: center;
   text-align: center;
-  line-height: 100px;
+  color: #fff;
+}
+
+footer {
+  width: 100%;
+  flex-direction: column;
+  
+  bottom: 0;
+  font-family: 'Poppins', sans-serif;
+
+  margin-top:  200px;
+
 
 }
 
 .footer-sup {
   width: 100%;
   height: 104px;
-  background: #e9ecef;
+  background: #121721;
 }
 
 .footer-inf {
   width: 100%;
   height: 174px;
-
-  background: #dee2e6;
+  background: #0c0f16;
+  ;
 }
