--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+
 body {
   padding: 0;
   margin: 0;
+  color:#0c0f16;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Ubuntu', sans-serif;
+  background-color: #ebf2f5;
 }
