--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,4 +1,146 @@
-.header {
-  background: #e9ecef;
+
+header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-align: center;
   height: 72px;
+  justify-content: center;
+
+  background-color: #121721;
+  border-bottom: solid #1b202a 1px;
+}
+
+
+
+.navbar {
+
+
+  position: static;
+
+  z-index: 999;
+  font-family: 'Ubuntu', sans-serif;
+
+  background-color: #121721;
+
+  width: calc(960px + (2 * 24px));
+
+}
+
+.navbar .max-width {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.logo {
+  height: 50px;
+}
+
+.navbar .menu li {
+  list-style: none;
+  display: inline-block;
+}
+
+.navbar .menu li a {
+  display: flex;
+  flex-direction: row;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.menu-btn {
+  color: #fff;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
+
+}
+
+/* @media (max-width: 690px) {
+  .menu {
+
+    display: none;
+  }
+
+  .menu-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+  }
+
+} */
+
+
+@media (max-width: 800px) {
+  .menu-btn {
+    display: block;
+    z-index: 999;
+  }
+
+  .menu-btn .icon:before {
+    content: "\f00d";
+  }
+
+
+
+  .navbar .menu {
+    background-color: #121721;
+    position: fixed;
+    height: 100vh;
+    width: 50%;
+    left: 0;
+    top: -16px;
+    text-align: center;
+    padding: 0;
+    transition: all 0.3s ease;
+  }
+
+  .navbar .menu.on {
+    display: none;
+  }
+
+  .navbar .menu li {
+    position: static;
+    display: flex;
+    padding: 0 8px;
+
+    transition: .5s ease-in-out;
+
+  }
+
+  .navbar .menu li:hover {
+    background-color:  #1b202a;
+    transition: .4s ease-in-out;
+  }
+
+  .navbar .menu li a {
+    display: inline-block;
+    margin: 13px 0;
+    font-size: 25px;
+  }
+
+  .max-width {
+    max-width: 930px;
+  }
+
+
+}
+
+section {
+  padding: 50px 0;
+}
+
+@media (max-width: 690px) {
+  section {
+    padding: 20px 0;
+  }
 }
