--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,7 @@
     text-align: center;
     padding-left: 24px;
     padding-right: 24px;
+    /* height: 100vh; */
 
 }
 
@@ -40,9 +41,8 @@ h3 {
     flex-direction: column;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 870px) {
     .main {
         flex-direction: column;
-
     }
 }
