--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -1,7 +1,14 @@
+.title-page {
+    color: #0c0f16;
+    font-size: 68px;
+}
 
-
-h2 {
+.subtitle-page {
     color: #0c0f16;
     font-size: 48px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 8px;
 
 }
