--- a/src/styles/artigo.css
+++ b/src/styles/artigo.css
@@ -3,7 +3,8 @@ a {
     align-items: center;
     text-align: center;
     gap: 2px;
-    font-size: 14px;
+    font-size: 16px;
     text-decoration: none;
+    line-height: 20px;
     color: black;
 }
