--- a/src/styles/cardlinguagem.css
+++ b/src/styles/cardlinguagem.css
@@ -10,7 +10,8 @@
     max-width: 480px;
     max-height: 180px;
     height: 180px;
-    border-top: solid #1b202a 1px;
+    border-top: solid #bcb9b9 1px;
+    border-bottom: solid #bcb9b9 1px;
     gap: 35px;
     padding-bottom: 8px;
 
@@ -37,13 +38,12 @@
 }
 
 .resumo .card-title {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
-    /* padding-top: 24px; */
+   
 }
 
 .resumo .content {
-    font-size: 14px;
     text-align: left;
     width: 356px;
 }
