--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
 
 body {
   padding: 0;
@@ -7,6 +8,5 @@ body {
   box-sizing: border-box;
   text-decoration: none;
   font-family: 'Ubuntu', sans-serif;
-  background-color: #ebf2f5;
- 
+  background-color: #f9f3fa;
 }
