--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,12 @@
+
 .flex {
     display: flex;
-    /* align-items: center; */
 }
 
 .content {
+    
     flex-direction: column;
-    color:#0c0f16;
+    color: #0c0f16;
     justify-content: center;
     text-align: center;
     padding-left: 24px;
@@ -18,6 +19,7 @@ h3 {
     font-size: 24px;
     color: #0c0f16;
     font-weight: bold;
+    line-height: 32px;
 }
 
 .main {
@@ -25,15 +27,17 @@ h3 {
     justify-content: space-between;
     width: 100%;
     max-width: calc(960px + (2 * 24px));
-    
-
-
 }
 
 .linguagem {
     width: 100%;
     flex-direction: column;
+}
 
+.card-content {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 14px;
+    text-align: left;
 }
 
 .ferramentas-execucao {
