--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -1,14 +1,22 @@
 .title-page {
     color: #0c0f16;
     font-size: 68px;
+    font-family: 'Ubuntu', sans-serif;
 }
+
+.title2{
+    font-size: 48px;
+    color: #0c0f16;
+    font-family: 'Ubuntu', sans-serif;
+}
+
 
 .subtitle-page {
     color: #0c0f16;
-    font-size: 48px;
+    font-size: 32px;
     display: flex;
     align-items: center;
     text-align: center;
     gap: 8px;
-
+    line-height: 48px; 
 }
