--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300;100&subset=latin-ext');
+
 .flex {
   display: flex;
   justify-content: center;
@@ -24,5 +26,17 @@
   width: 100%;
   height: 174px;
   background: #0c0f16;
-  ;
+  font-family:Montserrat, sans-serif;
+}
+
+.socials{
+  display: flex;
+  flex-direction: row;
+  font-size: 20px;
+  text-decoration: none;
+  list-style: none;
+}
+
+.icon {
+  color: white;
 }
